Proposal: add borderless cell style to table plugin as not users necessarily want borders on all tables. Example: a user editing his signature which is a table but he doesn't want border lines to be visible.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -46,6 +46,10 @@
 .fr-view table th.fr-thick {
   border-width: 2px;
 }
+.fr-view table td.fr-borderless,
+.fr-view table th.fr-borderless {
+  border: none;
+}
 .fr-view table th {
   background: #e6e6e6;
 }
