Update inline toolbar position iOS.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -933,6 +933,7 @@ iframe.fr-iframe {
 .fr-sticky-dummy {
   display: none;
 }
-.fr-sticky-on + .fr-sticky-dummy {
+.fr-sticky-on + .fr-sticky-dummy,
+.fr-sticky-box > .fr-sticky-dummy {
   display: block;
 }
