--- a/css/plugins/line_breaker.css
+++ b/css/plugins/line_breaker.css
@@ -16,35 +16,8 @@
   z-index: 2;
   display: none;
 }
-.fr-line-breaker a {
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  height: 24px;
-  width: 24px;
-  text-align: center;
+.fr-line-breaker a.fr-floating-btn {
   position: absolute;
-  left: calc(50% - (24px / 2));
-  top: -12px;
-  background: #1e88e5;
-  color: #ffffff;
-  -webkit-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  -moz-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  -ms-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  -o-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  outline: none;
-}
-.fr-line-breaker a:hover {
-  background: #222222;
-  color: #ffffff;
-  cursor: pointer;
-}
-.fr-line-breaker a i {
-  line-height: 24px;
+  left: calc(50% - (32px / 2));
+  top: -16px;
 }
