--- a/css/plugins/emoticons.css
+++ b/css/plugins/emoticons.css
@@ -18,4 +18,7 @@
   cursor: default;
   font-weight: normal;
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
