--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -458,8 +458,8 @@
 .dark-theme.fr-box .fr-counter {
   color: #aaaaaa;
   background: #ffffff;
-  border-top: solid 1px #595959;
-  border-left: solid 1px #595959;
+  border-top: solid 1px #ebebeb;
+  border-left: solid 1px #ebebeb;
   border-radius: 2px 0 0 0;
   -moz-border-radius: 2px 0 0 0;
   -webkit-border-radius: 2px 0 0 0;
@@ -468,7 +468,7 @@
   background-clip: padding-box;
 }
 .dark-theme.fr-box.fr-rtl .fr-counter {
-  border-right: solid 1px #595959;
+  border-right: solid 1px #ebebeb;
   border-radius: 0 2px 0 0;
   -moz-border-radius: 0 2px 0 0;
   -webkit-border-radius: 0 2px 0 0;
