--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -54,6 +54,62 @@
 .fr-box.fr-basic .fr-element {
   padding: 10px;
 }
+.fr-box a.fr-floating-btn {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  height: 32px;
+  width: 32px;
+  background: #ffffff;
+  color: #1e88e5;
+  -webkit-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  -moz-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  -ms-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  -o-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  outline: none;
+  left: 0;
+  top: 0;
+  line-height: 32px;
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  text-align: center;
+  display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: none;
+}
+.fr-box a.fr-floating-btn svg {
+  -webkit-transition: transform 0.2s ease 0s;
+  -moz-transition: transform 0.2s ease 0s;
+  -ms-transition: transform 0.2s ease 0s;
+  -o-transition: transform 0.2s ease 0s;
+  fill: #1e88e5;
+}
+.fr-box a.fr-floating-btn.fr-btn + .fr-btn {
+  margin-left: 10px;
+}
+.fr-box a.fr-floating-btn:hover {
+  background: #ebebeb;
+  cursor: pointer;
+}
+.fr-box a.fr-floating-btn:hover svg {
+  fill: #1e88e5;
+}
+.fr-box .fr-visible a.fr-floating-btn {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
 iframe.fr-iframe {
   width: 100%;
   border: none;
@@ -484,61 +540,6 @@ iframe.fr-iframe {
 .fr-toolbar.fr-mobile .fr-command.fr-blink,
 .fr-popup.fr-mobile .fr-command.fr-blink {
   background: transparent;
-}
-a.fr-floating-btn {
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border-radius: 100%;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  height: 32px;
-  width: 32px;
-  background: #ffffff;
-  color: #1e88e5;
-  -webkit-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
-  -moz-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
-  -ms-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
-  -o-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
-  outline: none;
-  left: 0;
-  top: 0;
-  line-height: 32px;
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  -o-transform: scale(0);
-  text-align: center;
-  display: block;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-a.fr-floating-btn svg {
-  -webkit-transition: transform 0.2s ease 0s;
-  -moz-transition: transform 0.2s ease 0s;
-  -ms-transition: transform 0.2s ease 0s;
-  -o-transition: transform 0.2s ease 0s;
-  fill: #1e88e5;
-}
-a.fr-floating-btn.fr-btn + .fr-btn {
-  margin-left: 10px;
-}
-a.fr-floating-btn:hover {
-  background: #ebebeb;
-  cursor: pointer;
-}
-a.fr-floating-btn:hover svg {
-  fill: #1e88e5;
-}
-.fr-visible a.fr-floating-btn {
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
 }
 .fr-command.fr-btn + .fr-dropdown-menu {
   display: inline-block;
