--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -25,6 +25,40 @@
   border-color: #43a047;
   color: #43a047;
 }
+.royal-theme a.fr-floating-btn {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  height: 32px;
+  width: 32px;
+  background: #ffffff;
+  color: #553982;
+  -webkit-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  -moz-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  -ms-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  -o-transition: background 0.2s ease 0s, color 0.2s ease 0s, transform 0.2s ease 0s;
+  line-height: 32px;
+  border: none;
+}
+.royal-theme a.fr-floating-btn svg {
+  -webkit-transition: transform 0.2s ease 0s;
+  -moz-transition: transform 0.2s ease 0s;
+  -ms-transition: transform 0.2s ease 0s;
+  -o-transition: transform 0.2s ease 0s;
+  fill: #553982;
+}
+.royal-theme a.fr-floating-btn:hover {
+  background: #9365b8;
+}
+.royal-theme a.fr-floating-btn:hover svg {
+  fill: #ffffff;
+}
+.royal-theme .fr-visible a.fr-floating-btn {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
 .royal-theme img.fr-dib {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -624,26 +658,9 @@
 .royal-theme .fr-line-breaker {
   border-top: 1px solid #553982;
 }
-.royal-theme .fr-line-breaker a {
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  height: 32px;
-  width: 32px;
+.royal-theme .fr-line-breaker a.fr-floating-btn {
+  left: calc(50% - (32px / 2));
   top: -16px;
-  background: #553982;
-  color: #553982;
-  -webkit-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  -moz-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  -ms-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-  -o-transition: background 0.2s ease 0s, color 0.2s ease 0s;
-}
-.royal-theme .fr-line-breaker a:hover {
-  background: #9365b8;
-  color: #ffffff;
-}
-.royal-theme .fr-line-breaker a i {
-  line-height: 32px;
 }
 .royal-theme table td.fr-selected-cell,
 .royal-theme table th.fr-selected-cell {
