--- a/css/themes/gray.css
+++ b/css/themes/gray.css
@@ -47,6 +47,10 @@
   -o-transition: transform 0.2s ease 0s;
   fill: #0097a7;
 }
+.gray-theme a.fr-floating-btn i {
+  font-size: 14px;
+  line-height: 32px;
+}
 .gray-theme a.fr-floating-btn:hover {
   background: #e6e6e6;
 }
