--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -47,6 +47,10 @@
   -o-transition: transform 0.2s ease 0s;
   fill: #ffca28;
 }
+.red-theme a.fr-floating-btn i {
+  font-size: 14px;
+  line-height: 32px;
+}
 .red-theme a.fr-floating-btn:hover {
   background: #ebebeb;
 }
