--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -54,6 +54,9 @@
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+.fr-element [contenteditable="true"] {
+  outline: 0px solid transparent;
+}
 .fr-box a.fr-floating-btn {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
