--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -123,37 +123,37 @@
   cursor: pointer;
 }
 .fr-view img.fr-dib {
-  margin: auto;
+  margin: 5px auto;
   display: block;
   float: none;
   vertical-align: top;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 .fr-view img.fr-dib.fr-fil {
-  margin: 5px auto 5px 0;
-  left: 5px;
+  margin-left: 0;
 }
 .fr-view img.fr-dib.fr-fir {
-  margin: 5px 0 5px auto;
-  right: 5px;
+  margin-right: 0;
 }
 .fr-view img.fr-dii {
-  margin: auto;
   display: inline-block;
   float: none;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  vertical-align: bottom;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 .fr-view img.fr-dii.fr-fil {
-  margin: 5px 10px 5px 0;
-  left: 5px;
   float: left;
+  margin-left: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 .fr-view img.fr-dii.fr-fir {
-  margin: 5px 0 5px 10px;
-  right: 5px;
   float: right;
+  margin-left: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
 .fr-view img.fr-rounded {
   border-radius: 100%;
@@ -221,37 +221,37 @@ img.fr-view {
   cursor: pointer;
 }
 img.fr-view.fr-dib {
-  margin: auto;
+  margin: 5px auto;
   display: block;
   float: none;
   vertical-align: top;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 img.fr-view.fr-dib.fr-fil {
-  margin: 5px auto 5px 0;
-  left: 5px;
+  margin-left: 0;
 }
 img.fr-view.fr-dib.fr-fir {
-  margin: 5px 0 5px auto;
-  right: 5px;
+  margin-right: 0;
 }
 img.fr-view.fr-dii {
-  margin: auto;
   display: inline-block;
   float: none;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  vertical-align: bottom;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 img.fr-view.fr-dii.fr-fil {
-  margin: 5px 10px 5px 0;
-  left: 5px;
   float: left;
+  margin-left: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 img.fr-view.fr-dii.fr-fir {
-  margin: 5px 0 5px 10px;
-  right: 5px;
   float: right;
+  margin-left: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
 img.fr-view.fr-rounded {
   border-radius: 100%;
