New lines shouldn not count in empty blocks.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -695,6 +695,9 @@ iframe.fr-iframe {
 .fr-popup .fr-hs {
   display: block !important;
 }
+.fr-popup .fr-hs.fr-hidden {
+  display: none !important;
+}
 .fr-popup .fr-input-line {
   position: relative;
   padding: 8px 0;
