Set min height for basic editor.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -21,6 +21,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   overflow-x: auto;
+  min-height: 40px;
 }
 .fr-element {
   background: transparent;
