--- a/css/themes/red.css
+++ b/css/themes/red.css
@@ -104,6 +104,7 @@
 .red-theme.fr-box.fr-basic .fr-element {
   padding: 10px;
   color: #000000;
+  min-height: 40px;
 }
 .red-theme .fr-wrapper .fr-placeholder {
   font-size: 12px;
