Fixes applying bold in Firefox on light text.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -9,6 +9,9 @@
   display: block;
   content: "";
 }
+.fr-view strong {
+  font-weight: 700;
+}
 .fr-view table {
   border: none;
   border-collapse: collapse;
